--- a/madera/madera.Android/madera.Android.csproj
+++ b/madera/madera.Android/madera.Android.csproj
@@ -58,13 +58,13 @@
       <Version>2.2.29</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>11.0.2</Version>
+      <Version>11.0.1</Version>
     </PackageReference>
     <PackageReference Include="sqlite">
       <Version>3.13.0</Version>
     </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
-      <Version>1.4.118</Version>
+      <Version>1.5.166-beta</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SQLite">
       <Version>1.0.108</Version>
